--- a/front-end/index.html
+++ b/front-end/index.html
@@ -10,21 +10,42 @@
   <script type="text/javascript" src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
   <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+  <!-- Social buttons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.10.1/bootstrap-social.min.css">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+
+  <!-- Google Maps -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt_Iu8lneJjK0Fnxn34y0ZHHelEvx0g8s&libraries=places"></script>
+
 <!-- Internal Files -->
   <script type="text/javascript" src="./js/app.js"></script>
-  <link rel="stylesheet" type="text/css" href="./css/style.css">
-  </head>
-  <body ng-app='AWOL'>
-  <a ui-sref="home"><h1 id="title">AWOL</h1></a>
-  <nav class='tabs'>
-    <a ui-sref-active='active' ui-sref="home">Home</a>
-    <a ui-sref-active='active' ui-sref="new">Log in</a>
-    <a ui-sref-active='active' ui-sref="about">register</a>
-    <a class="selfdefencebutton" ui-sref="projects">projects</a>
-  </nav>
+  <link rel="stylesheet" type="text/css" href="./css/app.css">
+</head>
+<body ng-controller="UsersController as users">
+  <div ng-controller="ProjectsController as projects">
+  <!-- Header -->
+    <header>
+      <nav>
+        <div class="pure-menu pure-menu-horizontal">
+          <a class="pure-menu-heading pure-menu-link" ui-sref-active="active" ui-sref="home"><h1>LOGGING</h1></a>
+          <ul class="pure-menu-list">
+            <li ng-hide="users.checkLoggedIn()"><a ui-sref-active="active" ui-sref="login">Login</a></li> 
+            <li ng-hide="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="register">Register</a></li>
+            <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="profile">My Profile</a></li>
+            <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="users">Users</a></li>
+            <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="projects">Projects</a></li>
+            <li ng-show="users.checkLoggedIn()" ><a ui-sref="home" ng-click="users.logout()">Logout</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main ui-view>
 
-  <div class="wrapper" ng-controller="usersController as users" ng-controller="projectsController as projects" ui-view>
-    </div>
-  </body>
+    </main>
+  </div>
+</body>
 </html>
-
