organised ng-flow

--- a/front-end/projectForm.html
+++ b/front-end/projectForm.html
@@ -16,6 +16,10 @@
     <label for="description">Description</label>
     <textarea name="description" id="description" ng-model="projects.project.description"></textarea>
   </div>
+  <div>
+    <label for="description">image</label>
+    <flow-btn ng-model="projects.project.image"></flow-btn>
+  </div>
   <div class="pure-control-group">
     <label for="github">Github</label>
     <input type="text" name="github" id="github" ng-model="projects.project.github">
@@ -28,3 +32,4 @@
     <button type="submit" class="pure-button pure-button-primary">Register</button>
   </div>
 </form>
+
