--- a/front-end/projects.html
+++ b/front-end/projects.html
@@ -18,6 +18,10 @@
     <label for="description">Description</label>
     <textarea name="description" id="description" ng-model="projects.project.description"></textarea>
   </div>
+  <div>
+    <label for="description">image</label>
+    <flow-btn ng-model="projects.project.image"></flow-btn>
+  </div>
   <div class="pure-control-group">
     <label for="github">Github</label>
     <input type="text" name="github" id="github" ng-model="projects.project.github">
