--- a/front-end/index.html
+++ b/front-end/index.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-messages.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
   <script type="text/javascript" src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-resource.min.js"></script>
   <script src="//cdn.jsdelivr.net/satellizer/0.13.1/satellizer.min.js"></script>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
@@ -21,31 +21,34 @@
   <!-- Google Maps -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt_Iu8lneJjK0Fnxn34y0ZHHelEvx0g8s&libraries=places"></script>
 
-<!-- Internal Files -->
+  <!-- Internal Files -->
   <script type="text/javascript" src="./js/app.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/app.css">
 </head>
 <body ng-controller="UsersController as users">
   <div ng-controller="ProjectsController as projects">
-  <!-- Header -->
-    <header>
-      <nav>
-        <div class="pure-menu pure-menu-horizontal">
-          <a class="pure-menu-heading pure-menu-link" ui-sref-active="active" ui-sref="home"><h1>LOGGING</h1></a>
-          <ul class="pure-menu-list">
-            <li ng-hide="users.checkLoggedIn()"><a ui-sref-active="active" ui-sref="login">Login</a></li> 
-            <li ng-hide="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="register">Register</a></li>
-            <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="profile">My Profile</a></li>
-            <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="users">Users</a></li>
-            <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="projects">Projects</a></li>
-            <li ng-show="users.checkLoggedIn()" ><a ui-sref="home" ng-click="users.logout()">Logout</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <main ui-view>
+    <div flow-init>
+      <!-- Header -->
+      <header>
+        <nav>
+          <div class="pure-menu pure-menu-horizontal">
+            <a class="pure-menu-heading pure-menu-link" ui-sref-active="active" ui-sref="home"><h1>LOGGING</h1></a>
+            <ul class="pure-menu-list">
+              <li ng-hide="users.checkLoggedIn()"><a ui-sref-active="active" ui-sref="login">Login</a></li> 
+              <li ng-hide="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="register">Register</a></li>
+              <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="profile">My Profile</a></li>
+              <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="users">Users</a></li>
+              <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="projects">Projects</a></li>
+              <li ng-show="users.checkLoggedIn()" ><a ui-sref="home" ng-click="users.logout()">Logout</a></li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <main ui-view>
 
-    </main>
+      </main>
+    </div>
   </div>
+</body>
 </body>
 </html>
