login layouts set

--- a/front-end/home.html
+++ b/front-end/home.html
@@ -3,6 +3,8 @@
 <ul id="projects">
   <div class="eachProject" ng-repeat="project in projects.all">
     <strong>{{ project.title }}</strong>
+      <img ng-src="{{ project.photo }}">
     <span class='status {{project.description | lowercase }}'>{{project.description | uppercase}}</span>
   </div>
 </ul>
+
