--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="logging">
+<html ng-app="AWOL">
 <head>
   <title>AWOL</title>
   <!-- External Files -->
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-messages.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
@@ -23,19 +23,20 @@
 
   <!-- Internal Files -->
   <script type="text/javascript" src="./js/app.js"></script>
+  <script type="text/javascript" src="./js/vendor.js"></script>
   <link rel="stylesheet" type="text/css" href="./css/app.css">
 </head>
 <body ng-controller="UsersController as users">
   <div ng-controller="ProjectsController as projects">
-    <div flow-init>
       <!-- Header -->
       <header>
         <nav>
           <div class="pure-menu pure-menu-horizontal">
             <a class="pure-menu-heading pure-menu-link" ui-sref-active="active" ui-sref="home"><h1>LOGGING</h1></a>
             <ul class="pure-menu-list">
-              <li ng-hide="users.checkLoggedIn()"><a ui-sref-active="active" ui-sref="login">Login</a></li> 
-              <li ng-hide="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="register">Register</a></li>
+              <li ng-hide="users.checkLoggedIn()"><a ui-sref-active="active" ui-sref="login">Agent</a></li> 
+              <li ng-hide="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="facebookRegister">join</a></li>
+              <li ng-hide="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="facebookLogIn">signIn</a></li>
               <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="profile">My Profile</a></li>
               <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="users">Users</a></li>
               <li ng-show="users.checkLoggedIn()" ><a ui-sref-active="active" ui-sref="projects">Projects</a></li>
@@ -46,9 +47,9 @@
       </header>
       <main ui-view>
 
+
+
       </main>
     </div>
-  </div>
-</body>
 </body>
 </html>
