--- a/front-end/login.html
+++ b/front-end/login.html
@@ -1,19 +1,13 @@
-<!-- Login form -->
-<section id="login" ng-hide="users.checkLoggedIn()">
-  <div class="pure-g">
-    <div class="pure-u-1">
-      <button ng-click="users.authenticate('facebook')">Sign in with Facebook</button>
-
       <form name="users.loginForm" class="pure-form pure-form-aligned" ng-submit="users.login()" novalidate>
         <legend>Login</legend>
 
         <div class="pure-control-group">
-          <label for="email">Email</label>
-          <input type="text" name="email" placeholder="Enter your email" ng-model="users.user.email" required>
+          <label for="email">username</label>
+          <input type="text" name="username" placeholder="Enter your username" ng-model="users.user.username" required>
         </div>
 
-        <div class="ng-message-error pure-control-group" ng-messages="users.loginForm['email'].$error" ng-show="(users.loginForm.$submitted && users.loginForm['email'].$invalid)">
-          <p ng-message="required">Email is required.</p>
+        <div class="ng-message-error pure-control-group" ng-messages="users.loginForm['username'].$error" ng-show="(users.loginForm.$submitted && users.loginForm['username'].$invalid)">
+          <p ng-message="required">username is required.</p>
         </div>
 
         <div class="pure-control-group">
@@ -30,6 +24,3 @@
         </div>
 
       </form>
-    </div>
-  </div>
-</section>
