--- a/front-end/registertakeo.html
+++ b/front-end/registertakeo.html
@@ -11,24 +11,10 @@
           <input type="text" name="username" placeholder="Username" ng-model="users.user.username">
         </div>
 
-        <div class="pure-control-group">
-          <label for="fullname">Full name</label>
-          <input type="text" name="fullname" placeholder="Fullname" ng-model="users.user.fullname">
-        </div>
 
-        <div class="pure-control-group">
-          <label for="image">ImageURL</label>
-          <input type="text" name="image" placeholder="Image URL " ng-model="users.user.image">
-        </div>
-
-        <div class="pure-control-group">
-          <label for="email">Email</label>
-          <input type="text" name="email" placeholder="Email" ng-model="users.user.email" required>
-        </div>
-
-        <div class="ng-message-error pure-control-group" ng-messages="users.registerForm['email'].$error" ng-show="(users.registerForm.$submitted && users.registerForm['email'].$invalid)">
+<!--         <div class="ng-message-error pure-control-group" ng-messages="users.registerForm['email'].$error" ng-show="(users.registerForm.$submitted && users.registerForm['email'].$invalid)">
           <p ng-message="required">Email is required.</p>
-        </div>
+        </div> -->
 
         <div class="pure-control-group">
           <label for="password">Password</label>
